--- a/angular/src/app/BUILD.bazel
+++ b/angular/src/app/BUILD.bazel
@@ -9,11 +9,11 @@ ng_ts_project(
     ),
     angular_assets = ["app.component.html"],
     deps = [
-        "//src/app/hello-world",
-        "//src/app/home",
-        "//src/app/todos",
-        "//src/app/todos/reducers",
-        "//src/shared/material",
+        "//angular/src/app/hello-world",
+        "//angular/src/app/home",
+        "//angular/src/app/todos",
+        "//angular/src/app/todos/reducers",
+        "//angular/src/shared/material",
         "@npm//@angular/common",
         "@npm//@angular/core",
         "@npm//@angular/platform-browser",
