--- a/angular/src/app/hello-world/BUILD.bazel
+++ b/angular/src/app/hello-world/BUILD.bazel
@@ -25,8 +25,8 @@ ng_ts_project(
         ":hello-world-styles",
     ],
     deps = [
-        "//src/lib/shorten",
-        "//src/shared/material",
+        "//angular/src/lib/shorten",
+        "//angular/src/shared/material",
         "@npm//@angular/core",
         "@npm//@angular/forms",
         "@npm//@angular/router",
@@ -39,7 +39,7 @@ ts_test_project(
     srcs = glob(["*.spec.ts"]),
     deps = [
         ":hello-world",
-        "//src/shared/material",
+        "//angular/src/shared/material",
         "@npm//@angular/core",
         "@npm//@angular/platform-browser",
     ],
@@ -57,11 +57,11 @@ karma_web_test_suite(
         "@io_bazel_rules_webtesting//browsers:firefox-local",
     ],
     specs = [
-        "//src:initialize_testbed.js",
+        "//angular/src:initialize_testbed.js",
         ":test_lib",
     ],
     deps = [
         ":test_lib",
-        "//src:initialize_testbed",
+        "//angular/src:initialize_testbed",
     ],
 )
